--- a/ar/3d/e57.ar.md
+++ b/ar/3d/e57.ar.md
@@ -23,7 +23,7 @@
 
 ## تنسيق ملف E57
 
-تتوفر مواصفات تنسيق ملف E57 على موقع ATSM ويمكن الرجوع إليها كمرجع للمطور. الورقة المفاهيمية والتفاصيل الفنية لتنسيق ملف E57 متاحة كمواد مرجعية بواسطة [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). يتم حفظ البيانات في ملف E57 في هيكل شجرة هرمي قائم على XML كما هو موضح في الصورة التالية. عند المستوى المنخفض ، يتم حفظ ملفات E57 كملفات ثنائية مضغوطة لجعل حجم الملف مضغوطًا.
+تتوفر مواصفات تنسيق ملف E57 على موقع ATSM ويمكن الرجوع إليها كمرجع للمطور. الورقة المفاهيمية والتفاصيل الفنية لتنسيق ملف E57 متاحة كمواد مرجعية بواسطة [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). يتم حفظ البيانات في ملف E57 في هيكل شجرة هرمي قائم على XML كما هو موضح في الصورة التالية. عند المستوى المنخفض ، يتم حفظ ملفات E57 كملفات ثنائية مضغوطة لجعل حجم الملف مضغوطًا.
 
 ### هيكل ملف E57
 
