--- a/bg/3d/e57.bg.md
+++ b/bg/3d/e57.bg.md
@@ -23,7 +23,7 @@
 
 ## E57 файлов формат
 
-Спецификациите на файловия формат E57 са достъпни на уебсайта на ATSM и могат да бъдат използвани за справка от разработчиците. Концептуалният документ и техническите подробности за файловия формат E57 са достъпни като референтен материал от [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Данните във файл E57 се записват в йерархична дървовидна структура, базирана на XML, както е показано на следващото изображение. На ниско ниво файловете E57 се записват като компресирани двоични файлове, за да бъде размерът на файла компактен.
+Спецификациите на файловия формат E57 са достъпни на уебсайта на ATSM и могат да бъдат използвани за справка от разработчиците. Концептуалният документ и техническите подробности за файловия формат E57 са достъпни като референтен материал от [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Данните във файл E57 се записват в йерархична дървовидна структура, базирана на XML, както е показано на следващото изображение. На ниско ниво файловете E57 се записват като компресирани двоични файлове, за да бъде размерът на файла компактен.
 
 ### E57 Файлова структура
 
