--- a/cs/3d/e57.cs.md
+++ b/cs/3d/e57.cs.md
@@ -23,7 +23,7 @@ Soubor s příponou .e57 je kompaktní, na dodavatele neutrální formát soubor
 
 ## Formát souboru E57
 
-Specifikace formátu souboru E57 jsou k dispozici na webových stránkách ATSM a lze na ně odkazovat pro vývojáře. Koncepční dokument a technické podrobnosti o formátu souboru E57 jsou k dispozici jako referenční materiál od [Daniela Hubera](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data v souboru E57 jsou uložena v hierarchické stromové struktuře založené na XML, jak je znázorněno na následujícím obrázku. Na nízké úrovni se soubory E57 ukládají jako komprimované binární soubory, aby byla velikost souboru kompaktní.
+Specifikace formátu souboru E57 jsou k dispozici na webových stránkách ATSM a lze na ně odkazovat pro vývojáře. Koncepční dokument a technické podrobnosti o formátu souboru E57 jsou k dispozici jako referenční materiál od [Daniela Hubera](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data v souboru E57 jsou uložena v hierarchické stromové struktuře založené na XML, jak je znázorněno na následujícím obrázku. Na nízké úrovni se soubory E57 ukládají jako komprimované binární soubory, aby byla velikost souboru kompaktní.
 
 ### Struktura souboru E57
 
