--- a/de/3d/e57.de.md
+++ b/de/3d/e57.de.md
@@ -23,7 +23,7 @@ Eine Datei mit der Erweiterung .e57 ist ein kompaktes, herstellerneutrales Datei
 
 ## E57-Dateiformat
 
-Die E57-Dateiformatspezifikationen sind auf der ATSM-Website verfügbar und können als Referenz für Entwickler herangezogen werden. Das Konzeptpapier und technische Details des E57-Dateiformats sind als Referenzmaterial von [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) erhältlich. Die Daten in einer E57-Datei werden in einer XML-basierten hierarchischen Baumstruktur gespeichert, wie im folgenden Bild gezeigt. Auf niedriger Ebene werden die E57-Dateien als komprimierte Binärdateien gespeichert, um die Dateigröße kompakt zu halten.
+Die E57-Dateiformatspezifikationen sind auf der ATSM-Website verfügbar und können als Referenz für Entwickler herangezogen werden. Das Konzeptpapier und technische Details des E57-Dateiformats sind als Referenzmaterial von [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) erhältlich. Die Daten in einer E57-Datei werden in einer XML-basierten hierarchischen Baumstruktur gespeichert, wie im folgenden Bild gezeigt. Auf niedriger Ebene werden die E57-Dateien als komprimierte Binärdateien gespeichert, um die Dateigröße kompakt zu halten.
 
 ### E57 Dateistruktur
 
