--- a/el/3d/e57.el.md
+++ b/el/3d/e57.el.md
@@ -23,7 +23,7 @@
 
 ## Μορφή αρχείου E57
 
-Οι προδιαγραφές μορφής αρχείου E57 είναι διαθέσιμες στον ιστότοπο της ATSM και μπορούν να αναφέρονται για αναφορά προγραμματιστή. Το πρωτότυπο έγγραφο και οι τεχνικές λεπτομέρειες της μορφής αρχείου E57 είναι διαθέσιμα ως υλικό αναφοράς από τον [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Τα δεδομένα σε ένα αρχείο E57 αποθηκεύονται σε μια ιεραρχική δομή δέντρου βασισμένη σε XML, όπως φαίνεται στην παρακάτω εικόνα. Σε χαμηλό επίπεδο, τα αρχεία E57 αποθηκεύονται ως συμπιεσμένα δυαδικά αρχεία για να γίνει το μέγεθος του αρχείου συμπαγές.
+Οι προδιαγραφές μορφής αρχείου E57 είναι διαθέσιμες στον ιστότοπο της ATSM και μπορούν να αναφέρονται για αναφορά προγραμματιστή. Το πρωτότυπο έγγραφο και οι τεχνικές λεπτομέρειες της μορφής αρχείου E57 είναι διαθέσιμα ως υλικό αναφοράς από τον [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Τα δεδομένα σε ένα αρχείο E57 αποθηκεύονται σε μια ιεραρχική δομή δέντρου βασισμένη σε XML, όπως φαίνεται στην παρακάτω εικόνα. Σε χαμηλό επίπεδο, τα αρχεία E57 αποθηκεύονται ως συμπιεσμένα δυαδικά αρχεία για να γίνει το μέγεθος του αρχείου συμπαγές.
 
 ### E57 Δομή αρχείου
 
