--- a/en/3d/e57.md
+++ b/en/3d/e57.md
@@ -23,7 +23,7 @@ A file with .e57 extension is a compact, vendor-neutral file format that is used
 
 ## E57 File Format
 
-The E57 file format specifications are available at ATSM website and can be referred to for developer's reference. The concept paper and technical details of E57 file format are available as reference material by [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). The data in an E57 file is saved in a XML based hierarchical tree structure as shown in following image. At low level, the E57 files are saved as compressed binary files to make the file size compact.
+The E57 file format specifications are available at ATSM website and can be referred to for developer's reference. The concept paper and technical details of E57 file format are available as reference material by [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). The data in an E57 file is saved in a XML based hierarchical tree structure as shown in following image. At low level, the E57 files are saved as compressed binary files to make the file size compact.
 
 ### E57 File Structure
 
