--- a/fr/3d/e57.fr.md
+++ b/fr/3d/e57.fr.md
@@ -23,7 +23,7 @@ Un fichier avec l'extension .e57 est un format de fichier compact et indépendan
 
 ## Format de fichier E57
 
-Les spécifications du format de fichier E57 sont disponibles sur le site Web de l'ATSM et peuvent être consultées à titre de référence pour les développeurs. Le document conceptuel et les détails techniques du format de fichier E57 sont disponibles en tant que matériel de référence par [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Les données d'un fichier E57 sont enregistrées dans une arborescence hiérarchique basée sur XML, comme illustré dans l'image suivante. À bas niveau, les fichiers E57 sont enregistrés sous forme de fichiers binaires compressés pour rendre la taille du fichier compacte.
+Les spécifications du format de fichier E57 sont disponibles sur le site Web de l'ATSM et peuvent être consultées à titre de référence pour les développeurs. Le document conceptuel et les détails techniques du format de fichier E57 sont disponibles en tant que matériel de référence par [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Les données d'un fichier E57 sont enregistrées dans une arborescence hiérarchique basée sur XML, comme illustré dans l'image suivante. À bas niveau, les fichiers E57 sont enregistrés sous forme de fichiers binaires compressés pour rendre la taille du fichier compacte.
 
 ### Structure du fichier E57
 
