--- a/he/3d/e57.he.md
+++ b/he/3d/e57.he.md
@@ -23,7 +23,7 @@
 
 ## פורמט קובץ E57
 
-מפרטי פורמט הקובץ E57 זמינים באתר ATSM וניתן להתייחס אליהם לעיון המפתחים. נייר הרעיון והפרטים הטכניים של פורמט הקובץ E57 זמינים כחומר עזר על ידי [דניאל הובר](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). הנתונים בקובץ E57 נשמרים במבנה עץ היררכי מבוסס XML כפי שמוצג בתמונה הבאה. ברמה נמוכה, קבצי E57 נשמרים כקבצים בינאריים דחוסים כדי להפוך את גודל הקובץ לקומפקטי.
+מפרטי פורמט הקובץ E57 זמינים באתר ATSM וניתן להתייחס אליהם לעיון המפתחים. נייר הרעיון והפרטים הטכניים של פורמט הקובץ E57 זמינים כחומר עזר על ידי [דניאל הובר](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). הנתונים בקובץ E57 נשמרים במבנה עץ היררכי מבוסס XML כפי שמוצג בתמונה הבאה. ברמה נמוכה, קבצי E57 נשמרים כקבצים בינאריים דחוסים כדי להפוך את גודל הקובץ לקומפקטי.
 
 ### E57 מבנה הקובץ
 
