--- a/hu/3d/e57.hu.md
+++ b/hu/3d/e57.hu.md
@@ -23,7 +23,7 @@ Az .e57 kiterjesztésű fájl egy kompakt, gyártó-semleges fájlformátum, ame
 
 ## E57 fájlformátum
 
-Az E57 fájlformátum specifikációi az ATSM webhelyén érhetők el, és a fejlesztői referenciaként hivatkozhatnak rájuk. Az E57 fájlformátum koncepcióját és műszaki részleteit [Daniel Huber] referenciaanyagként találja meg (http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Az E57 fájlban lévő adatok egy XML alapú hierarchikus fastruktúrába kerülnek mentésre, ahogy az a következő képen látható. Alacsony szinten az E57 fájlokat tömörített bináris fájlként menti a rendszer, hogy a fájlméret kompakt legyen.
+Az E57 fájlformátum specifikációi az ATSM webhelyén érhetők el, és a fejlesztői referenciaként hivatkozhatnak rájuk. Az E57 fájlformátum koncepcióját és műszaki részleteit [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) referenciaanyagként találja meg. Az E57 fájlban lévő adatok egy XML alapú hierarchikus fastruktúrába kerülnek mentésre, ahogy az a következő képen látható. Alacsony szinten az E57 fájlokat tömörített bináris fájlként menti a rendszer, hogy a fájlméret kompakt legyen.
 
 ### E57 Fájlszerkezet
 
