--- a/id/3d/e57.id.md
+++ b/id/3d/e57.id.md
@@ -23,7 +23,7 @@ File dengan ekstensi .e57 adalah format file ringkas dan netral vendor yang digu
 
 ## Format File E57
 
-Spesifikasi format file E57 tersedia di situs web ATSM dan dapat dirujuk untuk referensi pengembang. Makalah konsep dan detail teknis format file E57 tersedia sebagai bahan referensi oleh [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data dalam file E57 disimpan dalam struktur pohon hierarki berbasis XML seperti yang ditunjukkan pada gambar berikut. Pada level rendah, file E57 disimpan sebagai file biner terkompresi untuk membuat ukuran file menjadi ringkas.
+Spesifikasi format file E57 tersedia di situs web ATSM dan dapat dirujuk untuk referensi pengembang. Makalah konsep dan detail teknis format file E57 tersedia sebagai bahan referensi oleh [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data dalam file E57 disimpan dalam struktur pohon hierarki berbasis XML seperti yang ditunjukkan pada gambar berikut. Pada level rendah, file E57 disimpan sebagai file biner terkompresi untuk membuat ukuran file menjadi ringkas.
 
 ### Struktur File E57
 
