--- a/it/3d/e57.it.md
+++ b/it/3d/e57.it.md
@@ -23,7 +23,7 @@ Un file con estensione .e57 è un formato di file compatto, indipendente dal for
 
 ## E57 Formato file
 
-Le specifiche del formato file E57 sono disponibili sul sito Web di ATSM e possono essere consultate come riferimento per gli sviluppatori. Il documento concettuale e i dettagli tecnici del formato di file E57 sono disponibili come materiale di riferimento da [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). I dati in un file E57 vengono salvati in una struttura ad albero gerarchica basata su XML, come mostrato nell'immagine seguente. A basso livello, i file E57 vengono salvati come file binari compressi per rendere compatte le dimensioni del file.
+Le specifiche del formato file E57 sono disponibili sul sito Web di ATSM e possono essere consultate come riferimento per gli sviluppatori. Il documento concettuale e i dettagli tecnici del formato di file E57 sono disponibili come materiale di riferimento da [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). I dati in un file E57 vengono salvati in una struttura ad albero gerarchica basata su XML, come mostrato nell'immagine seguente. A basso livello, i file E57 vengono salvati come file binari compressi per rendere compatte le dimensioni del file.
 
 ### E57 Struttura del file
 
