--- a/ja/3d/e57.ja.md
+++ b/ja/3d/e57.ja.md
@@ -23,7 +23,7 @@
 
 ## E57 ファイル形式
 
-E57 ファイル形式の仕様は ATSM Web サイトで入手でき、開発者の参照用に参照できます。 E57 ファイル形式のコンセプト ペーパーと技術的な詳細は、[Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) によって参考資料として入手できます。 E57 ファイルのデータは、次の図に示すように、XML ベースの階層ツリー構造で保存されます。低レベルでは、E57 ファイルは圧縮されたバイナリ ファイルとして保存され、ファイル サイズがコンパクトになります。
+E57 ファイル形式の仕様は ATSM Web サイトで入手でき、開発者の参照用に参照できます。 E57 ファイル形式のコンセプト ペーパーと技術的な詳細は、[Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) によって参考資料として入手できます。 E57 ファイルのデータは、次の図に示すように、XML ベースの階層ツリー構造で保存されます。低レベルでは、E57 ファイルは圧縮されたバイナリ ファイルとして保存され、ファイル サイズがコンパクトになります。
 
 ### E57 ファイル構造
 
