--- a/ko/3d/e57.ko.md
+++ b/ko/3d/e57.ko.md
@@ -23,7 +23,7 @@
 
 ## E57 파일 형식
 
-E57 파일 형식 사양은 ATSM 웹사이트에서 제공되며 개발자 참조용으로 참조할 수 있습니다. E57 파일 형식의 개념 문서 및 기술 세부 사항은 [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf)에서 참조 자료로 사용할 수 있습니다. E57 파일의 데이터는 다음 이미지와 같이 XML 기반 계층 트리 구조로 저장됩니다. 낮은 수준에서 E57 파일은 압축된 바이너리 파일로 저장되어 파일 크기를 압축합니다.
+E57 파일 형식 사양은 ATSM 웹사이트에서 제공되며 개발자 참조용으로 참조할 수 있습니다. E57 파일 형식의 개념 문서 및 기술 세부 사항은 [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf)에서 참조 자료로 사용할 수 있습니다. E57 파일의 데이터는 다음 이미지와 같이 XML 기반 계층 트리 구조로 저장됩니다. 낮은 수준에서 E57 파일은 압축된 바이너리 파일로 저장되어 파일 크기를 압축합니다.
 
 ### E57 파일 구조
 
