--- a/nl/3d/e57.nl.md
+++ b/nl/3d/e57.nl.md
@@ -23,7 +23,7 @@ Een bestand met de extensie .e57 is een compacte, leveranciersonafhankelijke bes
 
 ## E57-bestandsindeling
 
-De specificaties van het E57-bestandsformaat zijn beschikbaar op de ATSM-website en er kan naar worden verwezen als referentie voor de ontwikkelaar. Het conceptdocument en de technische details van het E57-bestandsformaat zijn beschikbaar als referentiemateriaal door [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). De gegevens in een E57-bestand worden opgeslagen in een op XML gebaseerde hiërarchische boomstructuur, zoals weergegeven in de volgende afbeelding. Op laag niveau worden de E57-bestanden opgeslagen als gecomprimeerde binaire bestanden om de bestandsgrootte compact te maken.
+De specificaties van het E57-bestandsformaat zijn beschikbaar op de ATSM-website en er kan naar worden verwezen als referentie voor de ontwikkelaar. Het conceptdocument en de technische details van het E57-bestandsformaat zijn beschikbaar als referentiemateriaal door [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). De gegevens in een E57-bestand worden opgeslagen in een op XML gebaseerde hiërarchische boomstructuur, zoals weergegeven in de volgende afbeelding. Op laag niveau worden de E57-bestanden opgeslagen als gecomprimeerde binaire bestanden om de bestandsgrootte compact te maken.
 
 ### E57 Bestandsstructuur
 
