--- a/pl/3d/e57.pl.md
+++ b/pl/3d/e57.pl.md
@@ -23,7 +23,7 @@ Plik z rozszerzeniem .e57 to kompaktowy, niezależny od dostawcy format pliku, k
 
 ## Format pliku E57
 
-Specyfikacje formatu plików E57 są dostępne na stronie internetowej ATSM i można się do nich odnieść w celach informacyjnych dla programistów. Dokument koncepcyjny i szczegóły techniczne formatu pliku E57 są dostępne jako materiał referencyjny przez [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Dane w pliku E57 są zapisywane w hierarchicznej strukturze drzewa opartej na XML, jak pokazano na poniższym obrazku. Na niskim poziomie pliki E57 są zapisywane jako skompresowane pliki binarne, aby zmniejszyć rozmiar pliku.
+Specyfikacje formatu plików E57 są dostępne na stronie internetowej ATSM i można się do nich odnieść w celach informacyjnych dla programistów. Dokument koncepcyjny i szczegóły techniczne formatu pliku E57 są dostępne jako materiał referencyjny przez [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Dane w pliku E57 są zapisywane w hierarchicznej strukturze drzewa opartej na XML, jak pokazano na poniższym obrazku. Na niskim poziomie pliki E57 są zapisywane jako skompresowane pliki binarne, aby zmniejszyć rozmiar pliku.
 
 ### Struktura pliku E57
 
