--- a/pt/3d/e57.pt.md
+++ b/pt/3d/e57.pt.md
@@ -23,7 +23,7 @@ Um arquivo com extensão .e57 é um formato de arquivo compacto e independente d
 
 ## Formato de arquivo E57
 
-As especificações de formato de arquivo E57 estão disponíveis no site da ATSM e podem ser consultadas para referência do desenvolvedor. O documento conceitual e os detalhes técnicos do formato de arquivo E57 estão disponíveis como material de referência por [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Os dados em um arquivo E57 são salvos em uma estrutura de árvore hierárquica baseada em XML, conforme mostrado na imagem a seguir. Em nível baixo, os arquivos E57 são salvos como arquivos binários compactados para tornar o tamanho do arquivo compacto.
+As especificações de formato de arquivo E57 estão disponíveis no site da ATSM e podem ser consultadas para referência do desenvolvedor. O documento conceitual e os detalhes técnicos do formato de arquivo E57 estão disponíveis como material de referência por [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Os dados em um arquivo E57 são salvos em uma estrutura de árvore hierárquica baseada em XML, conforme mostrado na imagem a seguir. Em nível baixo, os arquivos E57 são salvos como arquivos binários compactados para tornar o tamanho do arquivo compacto.
 
 ### Estrutura do arquivo E57
 
