--- a/ro/3d/e57.ro.md
+++ b/ro/3d/e57.ro.md
@@ -23,7 +23,7 @@ Un fișier cu extensia .e57 este un format de fișier compact, neutru pentru fur
 
 ## Format de fișier E57
 
-Specificațiile de format de fișier E57 sunt disponibile pe site-ul web ATSM și pot fi consultate pentru referință de către dezvoltatori. Documentul conceptual și detaliile tehnice ale formatului de fișier E57 sunt disponibile ca material de referință de către [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Datele dintr-un fișier E57 sunt salvate într-o structură arborescentă ierarhică bazată pe XML, așa cum se arată în imaginea următoare. La nivel scăzut, fișierele E57 sunt salvate ca fișiere binare comprimate pentru a face dimensiunea fișierului compactă.
+Specificațiile de format de fișier E57 sunt disponibile pe site-ul web ATSM și pot fi consultate pentru referință de către dezvoltatori. Documentul conceptual și detaliile tehnice ale formatului de fișier E57 sunt disponibile ca material de referință de către [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Datele dintr-un fișier E57 sunt salvate într-o structură arborescentă ierarhică bazată pe XML, așa cum se arată în imaginea următoare. La nivel scăzut, fișierele E57 sunt salvate ca fișiere binare comprimate pentru a face dimensiunea fișierului compactă.
 
 ### E57 Structura fișierului
 
