--- a/sv/3d/e57.sv.md
+++ b/sv/3d/e57.sv.md
@@ -23,7 +23,7 @@ En fil med tillägget .e57 är ett kompakt, leverantörsneutralt filformat som a
 
 ## E57 filformat
 
-E57-filformatsspecifikationerna finns tillgängliga på ATSMs webbplats och kan hänvisas till för utvecklarens referens. Konceptpapperet och tekniska detaljer för E57-filformatet finns tillgängliga som referensmaterial av [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data i en E57-fil sparas i en XML-baserad hierarkisk trädstruktur som visas i följande bild. På låg nivå sparas E57-filerna som komprimerade binära filer för att göra filstorleken kompakt.
+E57-filformatsspecifikationerna finns tillgängliga på ATSMs webbplats och kan hänvisas till för utvecklarens referens. Konceptpapperet och tekniska detaljer för E57-filformatet finns tillgängliga som referensmaterial av [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Data i en E57-fil sparas i en XML-baserad hierarkisk trädstruktur som visas i följande bild. På låg nivå sparas E57-filerna som komprimerade binära filer för att göra filstorleken kompakt.
 
 ### E57 Filstruktur
 
