--- a/th/3d/e57.th.md
+++ b/th/3d/e57.th.md
@@ -23,7 +23,7 @@
 
 ## รูปแบบไฟล์ E57
 
-ข้อกำหนดรูปแบบไฟล์ E57 มีอยู่ในเว็บไซต์ ATSM และสามารถอ้างอิงสำหรับการอ้างอิงของนักพัฒนา กระดาษแนวคิดและรายละเอียดทางเทคนิคของรูปแบบไฟล์ E57 มีให้ใช้เป็นเอกสารอ้างอิงโดย [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) ข้อมูลในไฟล์ E57 จะถูกบันทึกในโครงสร้างต้นไม้แบบลำดับชั้นตาม XML ดังที่แสดงในภาพต่อไปนี้ ที่ระดับต่ำ ไฟล์ E57 จะถูกบันทึกเป็นไฟล์ไบนารีที่บีบอัดเพื่อทำให้ขนาดไฟล์มีขนาดกะทัดรัด
+ข้อกำหนดรูปแบบไฟล์ E57 มีอยู่ในเว็บไซต์ ATSM และสามารถอ้างอิงสำหรับการอ้างอิงของนักพัฒนา กระดาษแนวคิดและรายละเอียดทางเทคนิคของรูปแบบไฟล์ E57 มีให้ใช้เป็นเอกสารอ้างอิงโดย [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) ข้อมูลในไฟล์ E57 จะถูกบันทึกในโครงสร้างต้นไม้แบบลำดับชั้นตาม XML ดังที่แสดงในภาพต่อไปนี้ ที่ระดับต่ำ ไฟล์ E57 จะถูกบันทึกเป็นไฟล์ไบนารีที่บีบอัดเพื่อทำให้ขนาดไฟล์มีขนาดกะทัดรัด
 
 ### โครงสร้างไฟล์ E57
 
