--- a/tr/3d/e57.tr.md
+++ b/tr/3d/e57.tr.md
@@ -23,7 +23,7 @@
 
 ## E57 Dosya Biçimi
 
-E57 dosya biçimi belirtimleri ATSM web sitesinde mevcuttur ve geliştiricinin referansı için bunlara başvurulabilir. E57 dosya biçiminin kavram belgesi ve teknik ayrıntıları, [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) tarafından referans materyal olarak mevcuttur. Bir E57 dosyasındaki veriler, aşağıdaki görüntüde gösterildiği gibi XML tabanlı bir hiyerarşik ağaç yapısında kaydedilir. Düşük seviyede, E57 dosyaları, dosya boyutunu küçültmek için sıkıştırılmış ikili dosyalar olarak kaydedilir.
+E57 dosya biçimi belirtimleri ATSM web sitesinde mevcuttur ve geliştiricinin referansı için bunlara başvurulabilir. E57 dosya biçiminin kavram belgesi ve teknik ayrıntıları, [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf) tarafından referans materyal olarak mevcuttur. Bir E57 dosyasındaki veriler, aşağıdaki görüntüde gösterildiği gibi XML tabanlı bir hiyerarşik ağaç yapısında kaydedilir. Düşük seviyede, E57 dosyaları, dosya boyutunu küçültmek için sıkıştırılmış ikili dosyalar olarak kaydedilir.
 
 ### E57 Dosya Yapısı
 
