--- a/uk/3d/e57.uk.md
+++ b/uk/3d/e57.uk.md
@@ -23,7 +23,7 @@
 
 ## Формат файлу E57
 
-Технічні характеристики формату файлу E57 доступні на веб-сайті ATSM і можуть бути використані для довідки розробника. Концептуальний документ і технічні деталі формату файлу E57 доступні як довідковий матеріал [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Дані у файлі E57 зберігаються в ієрархічній структурі дерева на основі XML, як показано на наступному зображенні. На низькому рівні файли E57 зберігаються як стислі двійкові файли, щоб зробити розмір файлу компактним.
+Технічні характеристики формату файлу E57 доступні на веб-сайті ATSM і можуть бути використані для довідки розробника. Концептуальний документ і технічні деталі формату файлу E57 доступні як довідковий матеріал [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Дані у файлі E57 зберігаються в ієрархічній структурі дерева на основі XML, як показано на наступному зображенні. На низькому рівні файли E57 зберігаються як стислі двійкові файли, щоб зробити розмір файлу компактним.
 
 ### E57 Структура файлу
 
