--- a/ru/3d/e57.ru.md
+++ b/ru/3d/e57.ru.md
@@ -23,7 +23,7 @@
 
 ## Формат файла E57
 
-Спецификации формата файла E57 доступны на веб-сайте ATSM и могут использоваться для справки разработчика. Концептуальный документ и технические детали формата файла E57 доступны в качестве справочного материала [Daniel Huber](http://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Данные в файле E57 сохраняются в иерархической древовидной структуре на основе XML, как показано на следующем рисунке. На низком уровне файлы E57 сохраняются как сжатые двоичные файлы, чтобы уменьшить размер файла.
+Спецификации формата файла E57 доступны на веб-сайте ATSM и могут использоваться для справки разработчика. Концептуальный документ и технические детали формата файла E57 доступны в качестве справочного материала [Daniel Huber](https://paulbourke.net/dataformats/e57/2011-huber-e57-v3.pdf). Данные в файле E57 сохраняются в иерархической древовидной структуре на основе XML, как показано на следующем рисунке. На низком уровне файлы E57 сохраняются как сжатые двоичные файлы, чтобы уменьшить размер файла.
 
 ### Структура файла E57
 
