--- a/en/compression/r2.md
+++ b/en/compression/r2.md
@@ -55,7 +55,7 @@ The specific contents of multi-volume archive depend on what was included when c
 
 The format of a WinRAR multi-volume archive is RAR (Roshal Archive). RAR is a proprietary archive file format developed by Eugene Roshal, and WinRAR is a popular software application used to create and extract RAR archives.
 
-The RAR format supports compression and archiving of multiple files and folders into a single archive file. When a large archive is split into multiple volumes using WinRAR, each volume is typically assigned a unique file extension, such as .rar, .r00, .r01, and so on. These individual volume files collectively form the multi-volume archive..
+The RAR format supports compression and archiving of multiple files and folders into a single archive file. When a large archive is split into multiple volumes using WinRAR, each volume is typically assigned a unique file extension, such as .rar, .r00, .r01, and so on. These individual volume files collectively form the multi-volume archive.
 
 ## References
 * [RAR (file format)](https://en.wikipedia.org/wiki/RAR_(file_format))
