--- a/bg/compression/r2.bg.md
+++ b/bg/compression/r2.bg.md
@@ -58,5 +58,5 @@
 RAR форматът поддържа компресиране и архивиране на множество файлове и папки в един архивен файл. Когато голям архив е разделен на няколко тома с помощта на WinRAR, на всеки том обикновено се присвоява уникално файлово разширение, като .rar, .r00, .r01 и т.н. Тези отделни томни файлове заедно образуват многотомния архив.
 
 ## Препратки
-* [RAR (файлов формат)](https://en.wikipedia.org/wiki/RAR_(файлов_формат))
+* [RAR (файлов формат)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
