--- a/cs/compression/r2.cs.md
+++ b/cs/compression/r2.cs.md
@@ -58,5 +58,5 @@ Formát vícesvazkového archivu WinRAR je RAR (Roshal Archive). RAR je propriet
 Formát RAR podporuje kompresi a archivaci více souborů a složek do jednoho archivního souboru. Když je velký archiv rozdělen na více svazků pomocí WinRAR, je každému svazku obvykle přiřazena jedinečná přípona souboru, například .rar, .r00, .r01 atd. Tyto jednotlivé soubory svazků společně tvoří vícesvazkový archiv.
 
 ## Reference
-* [RAR (formát souboru)](https://en.wikipedia.org/wiki/RAR_(formát_souboru))
+* [RAR (formát souboru)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
