--- a/id/compression/r2.id.md
+++ b/id/compression/r2.id.md
@@ -58,5 +58,5 @@ Format arsip multi-volume WinRAR adalah RAR (Roshal Archive). RAR adalah format 
 Format RAR mendukung kompresi dan pengarsipan banyak file dan folder ke dalam satu file arsip. Ketika arsip besar dipecah menjadi beberapa volume menggunakan WinRAR, setiap volume biasanya diberi ekstensi file unik, seperti .rar, .r00, .r01, dan seterusnya. File volume individual ini secara kolektif membentuk arsip multivolume.
 
 ## Referensi
-* [RAR (format file)](https://en.wikipedia.org/wiki/RAR_(format_file))
+* [RAR (format file)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
