--- a/it/compression/r2.it.md
+++ b/it/compression/r2.it.md
@@ -58,5 +58,5 @@ Il formato di un archivio multivolume WinRAR è RAR (Roshal Archive). RAR è un 
 Il formato RAR supporta la compressione e l'archiviazione di più file e cartelle in un unico file di archivio. Quando un archivio di grandi dimensioni viene suddiviso in più volumi utilizzando WinRAR, a ciascun volume viene generalmente assegnata un'estensione di file univoca, ad esempio .rar, .r00, .r01 e così via. Questi singoli file di volume formano collettivamente l'archivio multivolume.
 
 ## Riferimenti
-* [RAR (formato file)](https://en.wikipedia.org/wiki/RAR_(formato_file))
+* [RAR (formato file)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
