--- a/nl/compression/r2.nl.md
+++ b/nl/compression/r2.nl.md
@@ -58,5 +58,5 @@ Het formaat van een WinRAR-archief met meerdere volumes is RAR (Roshal Archive).
 Het RAR-formaat ondersteunt compressie en archivering van meerdere bestanden en mappen in één archiefbestand. Wanneer een groot archief met WinRAR in meerdere volumes wordt opgesplitst, wordt aan elk volume doorgaans een unieke bestandsextensie toegewezen, zoals .rar, .r00, .r01, enzovoort. Deze individuele volumebestanden vormen samen het archief met meerdere volumes.
 
 ## Referenties
-* [RAR (bestandsformaat)](https://en.wikipedia.org/wiki/RAR_(bestandsformaat))
+* [RAR (bestandsformaat)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
