--- a/pl/compression/r2.pl.md
+++ b/pl/compression/r2.pl.md
@@ -58,5 +58,5 @@ Format wielotomowego archiwum WinRAR to RAR (Archiwum Roshal). RAR to zastrzeżo
 Format RAR obsługuje kompresję i archiwizację wielu plików i folderów w jednym pliku archiwum. Kiedy duże archiwum jest dzielone na wiele woluminów za pomocą programu WinRAR, każdemu woluminowi przypisuje się zazwyczaj unikalne rozszerzenie pliku, takie jak .rar, .r00, .r01 i tak dalej. Te pojedyncze pliki woluminów wspólnie tworzą wielotomowe archiwum.
 
 ## Bibliografia
-* [RAR (format pliku)](https://en.wikipedia.org/wiki/RAR_(format_pliku))
+* [RAR (format pliku)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
