--- a/ro/compression/r2.ro.md
+++ b/ro/compression/r2.ro.md
@@ -58,5 +58,5 @@ Formatul unei arhive cu mai multe volume WinRAR este RAR (Arhiva Roshal). RAR es
 Formatul RAR acceptă comprimarea și arhivarea mai multor fișiere și foldere într-un singur fișier de arhivă. Când o arhivă mare este împărțită în mai multe volume folosind WinRAR, fiecărui volum i se atribuie de obicei o extensie unică de fișier, cum ar fi .rar, .r00, .r01 și așa mai departe. Aceste fișiere de volum individuale formează colectiv arhiva cu mai multe volume.
 
 ## Referințe
-* [RAR (format fișier)](https://en.wikipedia.org/wiki/RAR_(format_fișier))
+* [RAR (format fișier)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
