--- a/uk/compression/r2.uk.md
+++ b/uk/compression/r2.uk.md
@@ -58,5 +58,5 @@
 Формат RAR підтримує стиснення та архівування кількох файлів і папок в один архівний файл. Коли великий архів розбивається на кілька томів за допомогою WinRAR, кожному тому зазвичай призначається унікальне розширення файлу, наприклад .rar, .r00, .r01 тощо. Ці окремі файли томів разом утворюють багатотомний архів.
 
 ## Список літератури
-* [RAR (формат файлу)](https://en.wikipedia.org/wiki/RAR_(формат_файлу))
+* [RAR (формат файлу)](https://en.wikipedia.org/wiki/RAR_(file_format))
 
