Missing German Language Aritlces Added

--- a/de/plugin/8bi8.de.md
+++ b/de/plugin/8bi8.de.md
@@ -6,7 +6,7 @@
   "draft" : "false",
   "toc" : true,
   "title" : "8BI8-Datei – Was ist eine 8BI8-Datei und wie öffnet man sie?",
-  "description":"8BI8-Datei – Was ist eine 8BI8-Datei und wie öffnet man sie?",
+  "description":"Erfahren Sie mehr über das 8BI8-Dateiformat des Photoshop-Plugins und APIs, mit denen 8BI8-Dateien erstellt und geöffnet werden können.",
   "linktitle" : "8BI8",
   "menu" : {
     "docs" : {
