--- a/de/programming/f95.de.md
+++ b/de/programming/f95.de.md
@@ -6,7 +6,7 @@
   "draft" : "false",
   "toc" : true,
   "title" : "F95-Datei – Fortran 95-Quellcodedatei – Was ist eine .f95-Datei und wie öffnet man sie?",
-  "description" : "F95-Datei – Fortran 95-Quellcodedatei – Was ist eine .f95-Datei und wie öffnet man sie?",
+  "description" : "Erfahren Sie mehr über die Fortran 95-Quellcodedatei und wie Sie sie öffnen.",
   "linktitle" : "F95",
   "menu" : {
     "docs" : {
