--- a/es/programming/f95.es.md
+++ b/es/programming/f95.es.md
@@ -4,13 +4,13 @@
     "display_name" : "Shakeel Faiz"
 },
   "draft" : "false",
-  "toc" : "true",
+  "toc" : true,
   "title" : "Archivo F95 - Archivo de código fuente Fortran 95 - ¿Qué es el archivo .f95 y cómo abrirlo?",
   "description" : "Obtenga información sobre el archivo de código fuente Fortran 95 y cómo abrirlo.",
   "linktitle" : "F95",
   "menu" : {
     "docs" : {
-      "identifier" : "programming-en-f95",
+      "identifier" : "programming-es-f95",
       "parent" : "programming"
 }
 },
