--- a/es/plugin/8bi8.es.md
+++ b/es/plugin/8bi8.es.md
@@ -11,7 +11,7 @@
   "menu" : {
     "docs" : {
       "parent" : "plugin",
-      "identifier":"plugin-en-8bi8"
+      "identifier":"plugin-es-8bi8"
 }
 },
   "lastmod" : "2023-12-23"
