--- a/bn/3d/e57.bn.md
+++ b/bn/3d/e57.bn.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2021-02-01",
-  "keywords" : [ "e57 file", "e57 file format", "what is an e57 file", "file", "e57 example", "e57 file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description":"E57 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা E57 ফাইল খুলতে এবং তৈরি করতে পারে।",
-  "title" : "E57 - লিডার পয়েন্ট ক্লাউড ডেটা ফরম্যাট",
-  "linktitle" : "E57",
-  "menu" : {
-    "docs" : {
-      "parent" : "3d"
-}
-},
-  "lastmod" : "2021-02-01"
+  "date": "2021-02-01",
+  "keywords": [
+    "e57 file",
+    "e57 file format",
+    "what is an e57 file",
+    "file",
+    "e57 example",
+    "e57 file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "E57 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা E57 ফাইল খুলতে এবং তৈরি করতে পারে।",
+  "title": "E57 - লিডার পয়েন্ট ক্লাউড ডেটা ফরম্যাট",
+  "linktitle": "E57",
+  "menu": {
+    "docs": {
+      "parent": "3d",
+      "identifier": "3d-e57-bn"
+    }
+  },
+  "lastmod": "2021-02-01"
 }
 
 ## একটি E57 ফাইল কি?
