--- a/bn/3d/3D2.bn.md
+++ b/bn/3d/3D2.bn.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2019-10-11",
-  "keywords" : [ "3d2 file", "3d2 file format", "what is an 3d2 file", "file", "3d2 example", "3d2 file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description":"3D2 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা 3D2 ফাইল খুলতে এবং তৈরি করতে পারে।",
-  "title" : "3D2 - CAD-3D 2.0 ফাইল ফরম্যাট",
-  "linktitle" : "3D2",
-  "menu" : {
-    "docs" : {
-      "parent" : "3d"
-}
-},
-  "lastmod" : "2019-09-10"
+  "date": "2019-10-11",
+  "keywords": [
+    "3d2 file",
+    "3d2 file format",
+    "what is an 3d2 file",
+    "file",
+    "3d2 example",
+    "3d2 file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "3D2 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা 3D2 ফাইল খুলতে এবং তৈরি করতে পারে।",
+  "title": "3D2 - CAD-3D 2.0 ফাইল ফরম্যাট",
+  "linktitle": "3D2",
+  "menu": {
+    "docs": {
+      "parent": "3d",
+      "identifier": "3d-3D2-bn"
+    }
+  },
+  "lastmod": "2019-09-10"
 }
 
 ## একটি 3D2 ফাইল কি?
