bn/audio identifiers

--- a/bn/audio/rf64.bn.md
+++ b/bn/audio/rf64.bn.md
@@ -1,20 +1,32 @@
 {
-  "date" : "2021-08-06",
-  "keywords" : [ "rf64", "file", "extension", "format", "Audio", "RIFF64 broadcast wave", "rf64 extension", "rf64 files", "RIFF64","Winamp" ],
-  "author" : {
-    "display_name" : "Sami Cheema"
-},
-  "draft" : "false",
-  "toc" : true,
-  "description" : "RF64 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা RF64 ফাইল তৈরি এবং খুলতে পারে।",
-  "title" : "RF64 - 8 বিট স্যাম্পলড ভয়েস ফাইল ফরম্যাট",
-  "linktitle" : "RF64",
-  "menu" : {
-    "docs" : {
-      "parent" : "audio"
-}
-},
-  "lastmod" : "2021-08-06"
+  "date": "2021-08-06",
+  "keywords": [
+    "rf64",
+    "file",
+    "extension",
+    "format",
+    "Audio",
+    "RIFF64 broadcast wave",
+    "rf64 extension",
+    "rf64 files",
+    "RIFF64",
+    "Winamp"
+  ],
+  "author": {
+    "display_name": "Sami Cheema"
+  },
+  "draft": "false",
+  "toc": true,
+  "description": "RF64 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা RF64 ফাইল তৈরি এবং খুলতে পারে।",
+  "title": "RF64 - 8 বিট স্যাম্পলড ভয়েস ফাইল ফরম্যাট",
+  "linktitle": "RF64",
+  "menu": {
+    "docs": {
+      "parent": "audio",
+      "identifier": "audio-rf64-bn"
+    }
+  },
+  "lastmod": "2021-08-06"
 }
 
 ## একটি RF64 ফাইল কি? ##
