bn/compression identifiers

--- a/bn/compression/7Z.bn.md
+++ b/bn/compression/7Z.bn.md
@@ -1,20 +1,30 @@
 {
-  "date" : "2019-11-17",
-  "keywords" : [ "7z file", "7z file format", "what is a 7z file", "file", "7z example", "7z file extension","extension", "format" ],
-  "author" : {
-    "display_name" : "xwiki:XWiki.farooqsheikh"
-},
-  "draft" : "false",
-  "toc" : true,
-  "title" : "7Z - 7-ZIP সংকুচিত ফাইল বিন্যাস",
-  "description":"একটি 7Z ফাইল এবং APIগুলি কী যা 7Z ফাইলগুলি তৈরি এবং খুলতে পারে।",
-  "linktitle" : "7Z",
-  "menu" : {
-    "docs" : {
-      "parent" : "compression"
-}
-},
-  "lastmod" : "2020-09-05"
+  "date": "2019-11-17",
+  "keywords": [
+    "7z file",
+    "7z file format",
+    "what is a 7z file",
+    "file",
+    "7z example",
+    "7z file extension",
+    "extension",
+    "format"
+  ],
+  "author": {
+    "display_name": "xwiki:XWiki.farooqsheikh"
+  },
+  "draft": "false",
+  "toc": true,
+  "title": "7Z - 7-ZIP সংকুচিত ফাইল বিন্যাস",
+  "description": "একটি 7Z ফাইল এবং APIগুলি কী যা 7Z ফাইলগুলি তৈরি এবং খুলতে পারে।",
+  "linktitle": "7Z",
+  "menu": {
+    "docs": {
+      "parent": "compression",
+      "identifier": "compression-7Z-bn"
+    }
+  },
+  "lastmod": "2020-09-05"
 }
 
 ## একটি 7Z ফাইল কি?
