--- a/bn/compression/b1.bn.md
+++ b/bn/compression/b1.bn.md
@@ -1,19 +1,20 @@
 {
-  "date" : "2022-06-29",
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "title" : "B1 ফাইল ফরম্যাট - B1 সংকুচিত আর্কাইভ ফাইল",
-  "description":"B1 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা B1 ফাইল তৈরি এবং খুলতে পারে।",
-  "linktitle" : "B1",
-  "menu" : {
-    "docs" : {
-      "parent" : "compression"
-}
-},
-  "lastmod" : "2022-06-29"
+  "date": "2022-06-29",
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "title": "B1 ফাইল ফরম্যাট - B1 সংকুচিত আর্কাইভ ফাইল",
+  "description": "B1 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যা B1 ফাইল তৈরি এবং খুলতে পারে।",
+  "linktitle": "B1",
+  "menu": {
+    "docs": {
+      "parent": "compression",
+      "identifier": "compression-b1-bn"
+    }
+  },
+  "lastmod": "2022-06-29"
 }
 
 ## একটি B1 ফাইল কি?
