--- a/bn/compression/s00.bn.md
+++ b/bn/compression/s00.bn.md
@@ -1,19 +1,20 @@
 {
-  "date" : "2022-06-27",
-  "author" : {
-    "display_name" : "Kashif Iqbal"
-},
-  "draft" : "false",
-  "toc" : true,
-  "title" : "S00 ফাইল ফরম্যাট - ZipSplitter পার্ট 1 ফাইল",
-  "description":"S00 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যেগুলি S00 ফাইল তৈরি এবং খুলতে পারে।",
-  "linktitle" : "S00",
-  "menu" : {
-    "docs" : {
-      "parent" : "compression"
-}
-},
-  "lastmod" : "2022-06-27"
+  "date": "2022-06-27",
+  "author": {
+    "display_name": "Kashif Iqbal"
+  },
+  "draft": "false",
+  "toc": true,
+  "title": "S00 ফাইল ফরম্যাট - ZipSplitter পার্ট 1 ফাইল",
+  "description": "S00 ফাইল ফরম্যাট এবং API সম্পর্কে জানুন যেগুলি S00 ফাইল তৈরি এবং খুলতে পারে।",
+  "linktitle": "S00",
+  "menu": {
+    "docs": {
+      "parent": "compression",
+      "identifier": "compression-s00-bn"
+    }
+  },
+  "lastmod": "2022-06-27"
 }
 
 ## একটি S00 ফাইল কি?
